Unify on List.of