@@ -5,7 +5,6 @@ import com.yahoo.vespa.config.ConfigKey;
 import com.yahoo.vespa.config.RawConfig;
 import com.yahoo.vespa.config.protocol.JRTServerConfigRequest;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -51,7 +50,7 @@ public class MockConfigSourceClient implements ConfigSourceClient{
 
     @Override
     public List<String> getSourceConnections() {
-        return Collections.singletonList("N/A");
+        return List.of("N/A");
     }
 
     @Override
