@@ -12,7 +12,6 @@ import org.junit.jupiter.api.Test;
 import java.lang.reflect.Field;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -121,7 +120,7 @@ public class GroupingRequestTestCase {
     @Test
     void requireThatGetRequestsReturnsAllRequests() {
         Query query = new Query();
-        assertEquals(Collections.emptyList(), query.getSelect().getGrouping());
+        assertEquals(List.of(), query.getSelect().getGrouping());
 
         GroupingRequest foo = GroupingRequest.newInstance(query);
         assertEquals(List.of(foo), query.getSelect().getGrouping());
