@@ -6,7 +6,6 @@ import org.junit.jupiter.api.Test;
 import java.net.URI;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -20,7 +19,7 @@ import static org.junit.jupiter.api.Assertions.fail;
  */
 public class UriPatternTestCase {
 
-    private static final List<String> NO_GROUPS = Collections.emptyList();
+    private static final List<String> NO_GROUPS = List.of();
 
     @Test
     void requireThatIllegalPatternsAreDetected() {
